--- a/.github/workflows/build-guestfs.yaml
+++ b/.github/workflows/build-guestfs.yaml
@@ -29,8 +29,8 @@ jobs:
         run: |
           docker run --entrypoint /bin/sh --name guestfs --platform linux/${{ matrix.arch }} -v ${PWD}:/app alpine -c "apk update && \
           apk add git python3 make ninja gcc g++ musl-dev pkgconfig glib-dev pixman-dev perl && \
-          g++ guestfs.cpp -o guestfs && \
-          cd /app"
+          cd /app && \
+          g++ guestfs.cpp -o guestfs"
 
           sudo docker cp guestfs:/app/guestfs ./guestfs-${{ matrix.arch }}
 
