--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,25 @@
 {
   "files.associations": {
     "chrono": "cpp",
-    "thread": "cpp"
+    "thread": "cpp",
+    "iosfwd": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__split_buffer": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "filesystem": "cpp",
+    "initializer_list": "cpp",
+    "iterator": "cpp",
+    "regex": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "iostream": "cpp",
+    "__tree": "cpp",
+    "forward_list": "cpp",
+    "map": "cpp",
+    "valarray": "cpp"
   }
 }
