--- a/.github/workflows/build-guestfs.yaml
+++ b/.github/workflows/build-guestfs.yaml
@@ -30,7 +30,7 @@ jobs:
           docker run --entrypoint /bin/sh --name guestfs --platform linux/${{ matrix.arch }} -v ${PWD}:/app alpine -c "apk update && \
           apk add git python3 make ninja gcc g++ musl-dev pkgconfig glib-dev pixman-dev perl && \
           cd /app && \
-          g++ guestfs.cpp -std=c++17 -o guestfs"
+          g++ guestfs.cpp -std=c++17 -I./ -o guestfs"
 
           sudo docker cp guestfs:/app/guestfs ./guestfs-${{ matrix.arch }}
 
