--- a/.github/workflows/build-guestfs.yaml
+++ b/.github/workflows/build-guestfs.yaml
@@ -30,13 +30,16 @@ jobs:
           docker run --entrypoint /bin/sh --name guestfs --platform linux/${{ matrix.arch }} -v ${PWD}:/app alpine -c "apk update && \
           apk add git python3 make ninja gcc g++ musl-dev pkgconfig glib-dev pixman-dev perl && \
           cd /app && \
-          g++ guestfs.cpp -std=c++17 -I./ -o guestfs"
+          g++ guestfs.cpp -std=c++17 -I./ -o guestfs && \
+          g++ guestexec.cpp -std=c++17 -I./ -o guestexec"
 
           sudo docker cp guestfs:/app/guestfs ./guestfs-${{ matrix.arch }}
+          sudo docker cp guestfs:/app/guestexec ./guestexec-${{ matrix.arch }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             guestfs-${{ matrix.arch }}
+            guestexec-${{ matrix.arch }}
           prerelease: true
